# kami-gather-provider

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  docker-compose.old.yaml  docker-compose.yaml  init_project.py  pyproject.toml  requirements.txt
airflow/: Dockerfile  build_airflow.ps1  build_airflow.sh  requirements.txt
airflow/dags/: market_extract.py
airflow/src/: market_collector.py  market_patterns.py  unpacker.py
airflow/src/configs/: config.py
airflow/src/models/: market_models.py
item_data/: item_dataitem_info_10_1.csv  item_dataitem_info_10_10.csv  item_dataitem_info_10_11.csv  item_dataitem_info_10_12.csv  item_dataitem_info_10_13.csv  item_dataitem_info_10_14.csv  item_dataitem_info_10_15.csv  item_dataitem_info_10_16.csv  item_dataitem_info_10_17.csv  item_dataitem_info_10_19.csv  item_dataitem_info_10_2.csv  item_dataitem_info_10_20.csv  item_dataitem_info_10_21.csv  item_dataitem_info_10_22.csv  item_dataitem_info_10_23.csv  item_dataitem_info_10_3.csv  item_dataitem_info_10_4.csv  item_dataitem_info_10_5.csv  item_dataitem_info_10_6.csv  item_dataitem_info_10_7.csv  item_dataitem_info_10_8.csv  item_dataitem_info_10_9.csv  item_dataitem_info_15_1.csv  item_dataitem_info_15_2.csv  item_dataitem_info_15_3.csv  item_dataitem_info_15_4.csv  item_dataitem_info_15_5.csv  item_dataitem_info_15_6.csv  item_dataitem_info_1_1.csv  item_dataitem_info_1_10.csv  item_dataitem_info_1_11.csv  item_dataitem_info_1_12.csv  item_dataitem_info_1_13.csv  item_dataitem_info_1_14.csv  item_dataitem_info_1_15.csv  item_dataitem_info_1_16.csv  item_dataitem_info_1_17.csv  item_dataitem_info_1_2.csv  item_dataitem_info_1_3.csv  item_dataitem_info_1_4.csv  (+116 more)
item_data/python/: get_item_info.py  write_item_info.py
postgres/: pg_pv.yaml  pg_pv_claim.yaml  pg_pvc_pv.yaml  start_on_kube.ps1
postgres/tables/: bdo_world_market_data_table.sql
postgres/views/: latest_records_view.sql
site/: .gitignore  README.md  mix.exs
site/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
site/test/site_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
site/test/support/: conn_case.ex  data_case.ex
src/v1/: .gitignore  collect.py  mongo_insert.py  surreal_ingest.py
src/v1/config/: config.py  db_config.py
src/v1/data_models/: market_reponse_models.py
src/v1/utils/: README.md  mongo_service.py  unpack.py
utils/: export_kube_yamls.ps1  start.ps1
visualization/v1/: IGNORE_REFERENCE_FILE_MarketData.py  market_data.py
visualization/v1/pages/: 1_Base_Price_Data.py  2_In_Stock_Data.py
visualization/v1/utils/: mongo_service.py  surreal_engine.py
