[tool.black]
line-length = 124
target-version = ['py39', 'py310']

[tool.ruff]
extend-select = ["ANN2",
    "C4",
    "SIM",
    "B",
    "BLE",
    "ERA",
    "I",
    "ICN",
    "ISC",
    "N",
    "PGH",
    "PIE",
    "RET",
    "RSE",
    "RUF",
    "S",
    "T20",
    "TID",
    "YTT",
    "W",
    "UP",
    "C90",
    "PD"]
ignore = [
    "E402",
    "B905",
    "N818",
    "S101",
    "B008"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
show-fixes = true
target-version = "py310"
line-length = 124
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["pydantic.validator"]

[tool.poetry]
name = "kami-gather-provider"
version = "0.1.0"
description = "A Python Visualization Website for Black Desert Online"
authors = ["Wes Hahn <52631646+wesh92@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "kami_gather_provider"}]

[tool.poetry.dependencies]
python = "^3.10.6"
black = "23.1.0"
pre-commit = "3.1.1"
ruff = "0.0.254"
streamlit = "1.20.0"
pydantic = "1.10.4"
httpx = "0.23.3"
requests = "2.28.2"
toml = "0.10.2"
pymongo = "4.3.3"
bitstring = "^4.0.2"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
